# Simple_SE

./: Cargo.toml  Dockerfile  Procfile  Rocket.toml  Shuttle.toml  flake.nix
src/: main.rs
src/utils/: github.rs  google.rs  mod.rs  nix.rs  twitch.rs  twitter.rs  view_media.rs
static/: index.html  styles.css
