[package]
name = "simple_se"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
percent-encoding = "2.1.0"
tokio = { version = "1", features = ["full"] }
axum = "0.8.4"
tracing-subscriber = "0.3.19"
tracing = "0.1.41"
tower-http = { version = "0.6.6", features = ["fs"], default-features = false }
serde = { version = "1", features = ["derive"] }
